--- a/variables.html
+++ b/variables.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>JavaScript Training</h1>
-    <script src="./looping.js">
+    <script src="./functionsex.js">
         // Your JavaScript code
         
     </script>
