--- a/variables.html
+++ b/variables.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <h1>JavaScript Training</h1>
-    <script src="./functionsex.js">
-        // Your JavaScript code
-        
-    </script>
+    <script src="./array.js"></script>
 </body>
 </html>
