--- a/variables.html
+++ b/variables.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>JavaScript Training</h1>
-    <script src="./array.js"></script>
+    <script src="./async.js"></script>
 </body>
 </html>
