--- a/dom.html
+++ b/dom.html
@@ -12,11 +12,20 @@
     <div class="test">division4</div>
     <div class="test">division6</div>
     <div class="test">division7</div> -->
-    <h1 id = "demo">Header</h1>
+    <!-- <h1 id = "demo">Header</h1>
     <div class="test">division01</div>  
     <div class="test">division02</div>  
     <div class="test">division03</div>  
-    <div class="test">division04</div>    
+    <div class="test">division04</div>     -->
+
+    <div class="bgColor">Red</div>
+    <div class="bgColor">Yellow</div>
+    <div class="bgColor">Blue</div>
+    <div class="bgColor">Green</div>
+    <div class="bgColor">Magenta</div>
+
+
+
     <script src="./dom.js"></script>
 </body>
 </html>
