--- a/dom1.html
+++ b/dom1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -27,4 +27,4 @@
 
     <script src="./dom1.js"></script>
 </body>
-</html>
+</html> -->
