--- a/variables.html
+++ b/variables.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>JavaScript Training</h1>
-    <script src="./async.js"></script>
+    <script type = "module" src="./app.js"></script>
+    <script></script>
 </body>
 </html>
